# be-homesearch

./: .gitignore  Makefile  Pipfile  README.md  docker-compose.yaml  env.sample  gather_homes.py  geocodes.csv  home_search.html  home_search.nb.html  home_search.rmd  homes.csv  homes_scored.xlsx  ops_config.yml  pyproject.toml  requirements.txt  tooltip-images.js  update_spreadsheet.py  zipcodes_num_fr_new.xls
config/: db.yml  pois.yml  sheet.yml  sheet_copy.yml
docker/: Dockerfile  Dockerfile.dagit  workspace.yaml
localize_be/: config.py  jobs.py  repo.py  scoring.py
localize_be/core/: scoring.py
localize_be/flows/: fill_cache.py  refetch_homes.py  rescore_homes.py  update_homes.py
localize_be/jobs/: fill_cache.py  fill_cache_dag.py  update_homes.py
localize_be/ops/: collect_homes.py  fill_cache.py  geocode.py  get_pois.py  score_homes.py  sync.py
localize_be/resources/: home_cache.py  immoweb.py  mapquest.py  sheet.py
localize_be/tasks/: collect_homes.py  fill_cache.py  geocode.py  get_pois.py  score_homes.py  sync.py
localize_be/tasks/models/: dataframes.py
tests/: test_collect_homes.py  test_get_pois.py  test_immoweb.py  test_mapquest.py  test_scoring.py  test_sheet.py
tests/samples/: iw_ad.html  iw_ad_2.html  iw_ad_3.html  iw_search.html
