[tool.poetry]
name = "localize_be"
version = "0.1.0"
description = ""
authors = ["Nicolas Galler <ngaller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
fake-useragent = "*"
beautifulsoup4 = "*"
requests = "*"
google-api-python-client = "^2.32.0"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
prefect = "^0.15.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
